исправления после автотестов

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                 менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи
                 <a class="link" href="https://www.dana.org/article/multicosts-of-multitasking/"
                 target="_blank">
-                  выяснили
+                  выяснили,
                 </a>
-                , что мозгу тяжело концентрироваться даже на двух делах одновременно.
+                что мозгу тяжело концентрироваться даже на двух делах одновременно.
                 А когда в поле внимания попадает несколько важных задач, организм паникует
                 и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем
                 невнимательно: ошибаемся и быстро устаём.
@@ -195,9 +195,9 @@
                   Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
                   <a class="link" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
                   target="_blank">
-                    показал
+                    показал,
                   </a>
-                  , что созерцание природы повышает концентрацию, в то время как после просмотра
+                  что созерцание природы повышает концентрацию, в то время как после просмотра
                   городских пейзажей она наоборот понижается. Можно совместить прогулку с
                   физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода
                   и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже
