--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   
   <body class="page">
     <header class="header decorated-zone">
+      <div class="decorative-element" aria-hidden="true">
+      </div>
       <nav class="header__theme-menu">
-        <div class="decorative-element" aria-hidden="true">
-        </div>
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
             <button class="header__theme-menu-button header__theme-menu-button_type_light">
@@ -70,10 +70,7 @@
                 Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим
                 менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи
                 <a class="link" href="https://www.dana.org/article/multicosts-of-multitasking/"
-                target="_blank">
-                  выяснили,
-                </a>
-                что мозгу тяжело концентрироваться даже на двух делах одновременно.
+                target="_blank">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно.
                 А когда в поле внимания попадает несколько важных задач, организм паникует
                 и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем
                 невнимательно: ошибаемся и быстро устаём.
@@ -194,10 +191,7 @@
                 <p class="rules__card__content content__section-main">
                   Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
                   <a class="link" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
-                  target="_blank">
-                    показал,
-                  </a>
-                  что созерцание природы повышает концентрацию, в то время как после просмотра
+                  target="_blank">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра
                   городских пейзажей она наоборот понижается. Можно совместить прогулку с
                   физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода
                   и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже
@@ -235,19 +229,19 @@
         </div>
       </section>
       <section class="pictures">
-        <h3 class="pictures__title content__section-with-bg-bold">
+        <h2 class="pictures__title content__section-with-bg-bold">
           А можно в картинках?
-        </h3>
+        </h2>
         <div class="pictures-block">
-          <img class="picture__item" src="./images/sunset.png" alt="Пейзаж, изображающий море, горы и заходящее солнце"
+          <img class="picture__item" src="./images/sunset.png" alt="Море, горы и заходящее солнце."
           loading="lazy">
-          <img class="picture__item" src="./images/ice-cream.png" alt="Улыбающаяся желтая тарелка с шариками мороженого"
+          <img class="picture__item" src="./images/ice-cream.png" alt="Улыбающаяся желтая тарелка с шариками мороженого."
           loading="lazy">
-          <img class="picture__item" src="./images/tape.png" alt="Фиолетовая кассета со стрелочкой"
+          <img class="picture__item" src="./images/tape.png" alt="Фиолетовая кассета со стрелочкой."
           loading="lazy">
-          <img class="picture__item" src="./images/books.png" alt="Стопка книг с чашкой чая наверху"
+          <img class="picture__item" src="./images/books.png" alt="Стопка книг с чашкой чая наверху."
           loading="lazy">
-          <img class="picture__item" src="./images/street.png" alt="Вид на улицу между домами"
+          <img class="picture__item" src="./images/street.png" alt="Вид на улицу между домами."
           loading="lazy">
         </div>
       </section>
